GPU Subdivision: Shade smooth Artifacts with edge crease #95242

Closed
opened 2022-01-27 08:03:32 +01:00 by Eugene · 11 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-26 21:12, hash: 0e86c60c28
Worked: (newest version of Blender that worked as expected)

Short description of error
When GPU SubD enable, Mean Crease + SubD create shade artefact.
In 3.0 all good.

изображение.png
Exact steps for others to reproduce the error

  • Enable GPU Subdivision from preferences
  • Add cylinder
  • shade smooth
  • Add subdivision surface modifier
  • Switch to edit mode
  • select top face
  • {nav Edge > Edge Crease} or Shift + E
  • Change factor to 1

File with first 6 steps:
#95242.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-26 21:12, hash: `0e86c60c28` Worked: (newest version of Blender that worked as expected) **Short description of error** When GPU SubD enable, Mean Crease + SubD create shade artefact. In 3.0 all good. ![изображение.png](https://archive.blender.org/developer/F12826966/изображение.png) **Exact steps for others to reproduce the error** - Enable GPU Subdivision from preferences - Add cylinder - shade smooth - Add subdivision surface modifier - Switch to edit mode - select top face - {nav Edge > Edge Crease} or Shift + E - Change factor to 1 File with first 6 steps: [#95242.blend](https://archive.blender.org/developer/F12827806/T95242.blend)
Author

Added subscriber: @SergienkoEugene

Added subscriber: @SergienkoEugene
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Hi, thanks for the report. I can not reproduce with your given steps on 3.1.0
probably artifacts appears on NVIDIA GPU only?
image.png

Operating system : Windows-10-10.0.18362-SP0 64 Bits
Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
Hi, thanks for the report. I can not reproduce with your given steps on 3.1.0 probably artifacts appears on NVIDIA GPU only? ![image.png](https://archive.blender.org/developer/F12827310/image.png) ```System Information Operating system : Windows-10-10.0.18362-SP0 64 Bits Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
Author

shade smooth?
so far I can only check on nvidia

shade smooth? so far I can only check on nvidia
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, can reproduce now. Thanks for the clarifying.

Hi, can reproduce now. Thanks for the clarifying.
Pratik Borhade changed title from Mean Crease GPU SubD shading Bug to GPU Subdivision: Shade smooth Artifacts with edge crease 2022-01-27 14:52:55 +01:00
Member

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Member

Hi @kevindietrich , can you look at this issue?

Hi @kevindietrich , can you look at this issue?
Member

Issue still persists on latest master. Raising the priority since it's a bug in new feature.

Feel free to lower the priority

Issue still persists on latest master. Raising the priority since it's a bug in new feature. Feel free to lower the priority

This issue was referenced by 118a219e9d

This issue was referenced by 118a219e9dcec433902b228dc8d029e7458e6976

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-02-25 21:25:47 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95242
No description provided.